Merged in feature/SA2FTAR-72-be-search-advertisements-endpoints-for-ui (pull request #22)
Feature/SA2FTAR-72 be search advertisements endpoints for ui

* Add new Endpoint - Search items by name

* Add advertising search endpoint with criteria filtering

* Fix style issues, clean&build

* Fix search by criteria endpoint to POST with @RequestBody

* Add color predicate fix toLowerCase()


Approved-by: Valdas Kulikajevas
Approved-by: Olga Volkova