@@ -1,11 +1,13 @@
 package com.devbridge.sourcery.myscrap.service;
 
 import com.devbridge.sourcery.myscrap.dto.AdvertisementDto;
+import com.devbridge.sourcery.myscrap.dto.AdvertisementSearchCriteria;
 import com.devbridge.sourcery.myscrap.dto.mapper.AdvertisementMapper;
+import com.devbridge.sourcery.myscrap.exception.MyScrapException;
 import com.devbridge.sourcery.myscrap.model.Advertisement;
+import com.devbridge.sourcery.myscrap.repository.AdvertisementCriteriaRepository;
 import com.devbridge.sourcery.myscrap.repository.AdvertisementRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -16,6 +18,7 @@ import org.springframework.stereotype.Service;
 public class AdvertisementService {
 
   public final AdvertisementRepository advertisementRepository;
+  public final AdvertisementCriteriaRepository advertisementCriteriaRepository;
   public final AdvertisementMapper advertisementMapper;
 
   public List<AdvertisementDto> findAllByItemName(String name) {
@@ -23,6 +26,20 @@ public class AdvertisementService {
     return advertisementsByItemName
       .stream()
       .map(advertisementMapper::mapToDto)
-      .collect(Collectors.toList());
+      .toList();
+  }
+
+  public List<AdvertisementDto> findByItemIdAndFilters(AdvertisementSearchCriteria searchCriteria) {
+    log.info("Finding advertisements with given Filters: {}", searchCriteria);
+    List<Advertisement> allByItemId = advertisementCriteriaRepository.findByItemIdWithFilter(searchCriteria);
+    boolean isEmpty = allByItemId.isEmpty();
+    if (isEmpty) {
+      throw new MyScrapException("No advertisement found by given search criteria");
+    }
+    return allByItemId.stream()
+      .map(advertisementMapper::mapToDto)
+      .toList();
   }
 }
+
+
